--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                 </div> -->
                 <div class="portfolio-item" data-category="logos">
                     <div class="portfolio-img">
-                        <img src="https://i.ibb.co/q3ZSbnyw/1738411122533.jpg" alt="Logo Design">
+                        <img src="CH.jfif">
                     </div>
                     <div class="portfolio-info">
                         <h3 data-en="Designing Company" data-ar="شعار شركة تصميم">Designing Company</h3>
