--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     </p>
                 </div>
                 <div class="about-image">
-                    <a href="https://ibb.co/3Y93dNH4"><img src="https://i.ibb.co/3Y93dNH4/476433135-618328144463348-3871029358582870171-n.jpg" alt="476433135-618328144463348-3871029358582870171-n" border="0"></a>
+                    <a href="PFP.jpg"><img src="https://i.ibb.co/3Y93dNH4/476433135-618328144463348-3871029358582870171-n.jpg" alt="476433135-618328144463348-3871029358582870171-n" border="0"></a>
                 </div>
             </div>
         </div>
@@ -686,7 +686,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item" data-category="logos">
                     <div class="portfolio-img">
-                        <img src="https://i.ibb.co/5x8xJKG1/1737981465108.jpg" alt="Logo Design">
+                        <img src="SB.jfif" alt="Logo Design">
                     </div>
                     <div class="portfolio-info">
                         <h3 data-en="Saudia Shawarma Resturant" data-ar="شعار مطعم شاورما سعودي">Saudia Shawarma Resturant</h3>
@@ -726,7 +726,7 @@
                 </div>
                 <div class="portfolio-item" data-category="branding">
                     <div class="portfolio-img">
-                        <img src="https://i.ibb.co/W4D1vg4T/1738009409793.jpg" alt="Brand Identity">
+                        <img src="CS.jfif">
                     </div>
                     <div class="portfolio-info">
                         <h3 data-en="Coding Seeds" data-ar="شعار منصة برمجة تعليمية">Coding Seeds</h3>
@@ -736,7 +736,7 @@
                 </div>
                 <div class="portfolio-item" data-category="social">
                     <div class="portfolio-img">
-                        <img src="https://i.ibb.co/Z6Td6R08/photosop-lesson0-strawbery-1x.png" alt="Social Media">
+                        <img src="photosop-lesson0-strawbery@1x.png">
                     </div>
                     <div class="portfolio-info">
                         <h3 data-en="Strawberry juice social media design" data-ar="اٍعلان سوشيال ميديا لعصير فراولة">Strawberry juice social media design</h3>
