--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Professional graphic designer specializing in logo design, branding, and social media graphics. Explore Taher Ahmed’s creative portfolio." />
+    <meta name="keywords" content="Graphic Designer, Logo Design, Branding, Social Media Design, Visual Identity, Taher Ahmed" />
+    <meta name="author" content="Taher Ahmed" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taher Ahmed - Graphic Designer</title>
+    <title>Loading...</title>
+    <script>
+    // نفترض عندك متغير أو طريقة تحدد لغة المستخدم، مثلاً
+    // هنا مجرد مثال لاختيار اللغة يدوياً
+    let userLang = navigator.language || navigator.userLanguage; // يحدد لغة المتصفح
+
+    // لو عندك اختيار لغة في موقعك (عربي/انجليزي) استبدل userLang بالمتغير اللي يخزنها
+    // مثال: let userLang = "ar"; // أو "en"
+
+    if (userLang.startsWith('ar')) {
+      document.title = "طاهر أحمد | مصمم جرافيك - تصميم شعار وهوية";
+    } else {
+      document.title = "Taher Ahmed | Graphic Designer - Logo & Branding";
+    }
+    </script>
     <style>
         /* Reset and Base Styles */
         * {
