Update index.html, and upgrade ar translation, add icons, change email

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional graphic designer specializing in logo design, branding, and social media graphics. Explore Taher Ahmed’s creative portfolio." />
@@ -738,7 +743,7 @@
                     </div>
                     <div class="portfolio-info">
                         <h3 data-en="Designing Company" data-ar="شعار شركة تصميم">Designing Company</h3>
-                        <p data-en="A Logo inspierd by innovation and creativity beyond horizons" data-ar="شعار يحسد روح الابتكار. ويحلق باٍبداعه فوق حدود الافاق">A Logo inspierd by innovation and creativity beyond horizons</p>
+                        <p data-en="A Logo inspierd by innovation and creativity beyond horizons" data-ar="شعار يجسد روح الابتكار. ويحلق باٍبداعه فوق حدود الافاق">A Logo inspierd by innovation and creativity beyond horizons</p>
                         <a href="https://www.linkedin.com/posts/taher-ahmed-33649b278_graphicdesign-sketch-creative-activity-7291424731520471041-Wj0C?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEO0FRoBUf5ZFttDIVrGwn1yY4DyhZMlmr8" target="_blank" data-en="View Project" data-ar="عرض المشروع">View Project <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
@@ -786,7 +791,7 @@
                     </div>
                     <div class="contact-text">
                         <h3 data-en="Email" data-ar="البريد الإلكتروني">Email</h3>
-                        <a href="taherxtaher123@gmail.com">taherxtaher123@gmail.com</a>
+                        <a href="taher.ahmed.w@gmail.com">taher.ahmed.w@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact-card">
@@ -821,10 +826,10 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#" class="social-link"><i class="fab fa-behance"></i></a>
+                <a href="https://www.behance.net/taherahmed30" class="social-link"><i class="fab fa-behance"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-dribbble"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.instagram.com/taher.ahmed.w12?igsh=MXRobDRpMjVzbXdrbg==" class="social-link"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/taher-ahmed-33649b278/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <p>&copy; <span id="year"></span> Taher Ahmed. <span data-en="All rights reserved." data-ar="جميع الحقوق محفوظة.">All rights reserved.</span></p>
         </div>
